k8s/accesscontrol_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-accesscontrol
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-accesscontrol
      tier: backend
  template:
    metadata:
      labels:
        app: php-accesscontrol
        tier: backend
    spec:
      imagePullSecrets:
      - name: regcred
      serviceAccountName: symper
      containers:
      - name: php-accesscontrol
        ports:
        - containerPort: 9000
        image: registry.symper.vn/{SYMPER_IMAGE}
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh","-c","cp /src/env.json /var/www/accesscontrol.symper.vn" ]
        volumeMounts:
        - name: config-env
          mountPath: /src
        - name: authorization-key
          mountPath: /var/www/accesscontrol.symper.vn/Crypt
          readOnly: true
      - name: nginx-accesscontrol
        image: registry.symper.vn/nginx:1.2
        resources:
          requests:
            memory: "10Mi"
            cpu: "10m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config-env
        configMap:
          name: php-env-config-accesscontrol
      - name: authorization-key
        projected:
          sources:
          - secret:
              name: authorization-public-key
      - name: config
        configMap:
          name: nginx-config-accesscontrol
          items:
          - key: config
            path: accesscontrol.symper.vn.conf
