k8s/php_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {APP_NAME}
  labels:
    tier: backend
spec:
  selector:
    app: {APP_NAME}
    tier: backend
    role: {CURRENT_ROLE}
  ports:
    - name: php-accesscontrol
      port: 9000
