k8s/service_ing.yaml

apiVersion: v1
kind: Service
metadata:
    name: nginx-{APP_NAME}
spec:
    selector:
      app: {APP_NAME}
      tier: backend
      role: {TARGET_ROLE}
    ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-accesscontrol
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - {ENVIRONMENT_DOMAIN}accesscontrol.symper.vn
    secretName: symper-tls
  rules:
  - host: {ENVIRONMENT_DOMAIN}accesscontrol.symper.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: nginx-{APP_NAME}
             port:
                number: 80
